// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base case 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <Panel.Section>
    <NameField
      disabled={false}
    />
    <IpPoolSelect
      disabled={false}
      ipPools={
        Array [
          "an array of ip pools",
        ]
      }
    />
    <StatusSelect
      compliance={false}
      disabled={false}
    />
  </Panel.Section>
  <Panel.Section>
    <Button
      disabled={true}
      primary={true}
      size="default"
      submit={true}
    >
      Update
    </Button>
  </Panel.Section>
</form>
`;

exports[`cancel button 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <Panel.Section>
    <NameField
      disabled={false}
    />
    <IpPoolSelect
      disabled={false}
      ipPools={
        Array [
          "an array of ip pools",
        ]
      }
    />
    <StatusSelect
      compliance={false}
      disabled={false}
    />
  </Panel.Section>
  <Panel.Section>
    <Button
      disabled={false}
      primary={true}
      size="default"
      submit={true}
    >
      Update
    </Button>
    <Button
      disabled={false}
      size="default"
      style={
        Object {
          "marginLeft": "1em",
        }
      }
    >
      Cancel
    </Button>
  </Panel.Section>
</form>
`;

exports[`no ip pools 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <Panel.Section>
    <NameField
      disabled={false}
    />
    <StatusSelect
      compliance={false}
      disabled={false}
    />
  </Panel.Section>
  <Panel.Section>
    <Button
      disabled={true}
      primary={true}
      size="default"
      submit={true}
    >
      Update
    </Button>
  </Panel.Section>
</form>
`;

exports[`should disable all fields when compliance is true 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <Panel.Section>
    <NameField
      disabled={true}
    />
    <IpPoolSelect
      disabled={true}
      ipPools={
        Array [
          "an array of ip pools",
        ]
      }
    />
    <StatusSelect
      compliance={true}
      disabled={true}
    />
  </Panel.Section>
  <Panel.Section>
    <Button
      disabled={true}
      primary={true}
      size="default"
      submit={true}
    >
      Update
    </Button>
  </Panel.Section>
</form>
`;

exports[`submits correctly 1`] = `
<form
  onSubmit={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
    }
  }
>
  <Panel.Section>
    <NameField
      disabled={true}
    />
    <IpPoolSelect
      disabled={true}
      ipPools={
        Array [
          "an array of ip pools",
        ]
      }
    />
    <StatusSelect
      compliance={false}
      disabled={true}
    />
  </Panel.Section>
  <Panel.Section>
    <Button
      disabled={true}
      primary={true}
      size="default"
      submit={true}
    >
      Updating...
    </Button>
  </Panel.Section>
</form>
`;
